# Design-Patterns

./: LICENSE  README.md
src/cpp/1_SOLIDDesignPrinciples/1_SingleResponsibility/: SRP.cpp
src/cpp/1_SOLIDDesignPrinciples/2_Open-Closed/: OCP.cpp
src/cpp/1_SOLIDDesignPrinciples/3_LiskovSubstitution/: LSP.cpp
src/cpp/1_SOLIDDesignPrinciples/4_InterfaceSegregation/: ISP.cpp
src/cpp/1_SOLIDDesignPrinciples/5_DependencyInversion/: DIP.cpp
src/cpp/2_CreationalPatterns/1_Builder/: Builder.cpp  BuilderCodingExercise.cpp  Facets.cpp  GroovyStyle.cpp  Person.cpp  Person.h  PersonAddressBuilder.h  PersonBuilder.cpp  PersonBuilder.h  PersonJobBuilder.h
src/cpp/2_CreationalPatterns/2_Factories/: AbstractFactory.cpp  CoffeeFactory.h  DrinkFactory.h  Factory.cpp  FactoryCodingExercise.cpp  FactoryMethod.cpp  HotDrink.h  HotDrinkFactory.h  InnerFactory.cpp  TeaFactory.h
src/cpp/2_CreationalPatterns/3_Prototype/: Prototype.cpp  PrototypeCodingExercise.cpp
src/cpp/2_CreationalPatterns/4_Singleton/: BoostDI.cpp  Multiton.cpp  Singleton.h  SingletonCodingExercise.cpp  SingletonTests.cpp  di.h
src/cpp/3_StructuralPatterns/1_Adapter/: AdapterCodingExercise.cpp  AdapterVisual.cpp  AdapterVisual.h  AdapterVisual.sln  AdapterVisual.vcxproj  AdapterVisual.vcxproj.filters  AdapterVisualDlg.cpp  AdapterVisualDlg.h  Geometry.h  Resource.h  stdafx.cpp  stdafx.h
src/cpp/3_StructuralPatterns/2_Bridge/: BridgeCodingExercise.cpp  Person.cpp  Person.h  bridge.cpp
src/cpp/4_BehavioralPatterns/5_Mediator/chat/: CMakeLists.txt  ChatRoom.cpp  ChatRoom.hpp  Person.cpp  Person.hpp  main.cpp
(+570 files in other folders)
